<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminProfile">

    <EditText
        android:id="@+id/serviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:hint="Service Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/serviceHourlyRate"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="Service Hourly Rate (Integer)"
        android:inputType="text" />

    <Button
        android:id="@+id/adminAddService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="231dp"
        android:onClick="onClick10"
        android:text="Add Service" />

    <Button
        android:id="@+id/editOrRemoveService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="167dp"
        android:onClick="onClick11"
        android:text="Edit Or Remove Service" />
</RelativeLayout>