...
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignTop="@+id/signUpButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="134dp"
        android:text="Already had an account? Click here to sign in :"
...
        tools:layout_editor_absoluteY="292dp" />

    <Button
        android:id="@+id/homeOwnerLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminSignInButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
...
