...
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="2dp"
        android:text="Welcome" />

    <Button
        android:id="@+id/goToProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="213dp"
        android:onClick="onClick12"
...
